Fixed collapsing bug and no deck bug

--- a/cardhotbar/css/card-hotbar.css
+++ b/cardhotbar/css/card-hotbar.css
@@ -12,8 +12,8 @@
 #card-hotbar {
   z-index: 69;
   position: fixed;
-  bottom: 63px;
-  left: 220px;
+  top: 63px;
+  left: 118px;
   height: 200px;
   box-sizing: border-box;
 }
@@ -170,7 +170,7 @@
 }
 
 /*#card-hotbar .macro.active:hover {
-    
+
 }*/
 
 #card-hotbar .macro.inactive:hover {
